micro-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: micro-svc             # This is the service name. This is the "hostname" that the app must call to connect to redis
  #namespace: owner1
spec:
  type: LoadBalancer
  ports:
  - port: 9876
  selector:
    app: micro
