redis-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-svc             # This is the service name. This is the "hostname" that the app must call to connect to redis
  labels:
    app: redis
spec:
  type: ClusterIP
  ports:
  - port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    app: redis
