micro-netpol.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: backend-policy
  namespace: redis-ns
spec:
  podSelector:
    matchLabels:
      app: redis
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          purpose: development  # this label must be added to the proper namespaces
      podSelector:
        matchLabels:
          app: micro
